CONVERTS TO JUNIT5 AND REMOVE JUNIT4 DEPENDENCIES